@startuml it_polimi_ingsw_server_lobby
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.server.lobby

class Connection {
  -lobby : Lobby
  -channel : Channel<Event, Command>
  -state : volatile ConnectionState
  --
  +received() : void
  +closed() : void
  +queueAtTheDesk() : void
  +apply() : void
  +gone() : void
  +send() : void
  +channel() : Channel<Event, Command>
  +nickname() : String
  +nameYourself() : void
  +handOverTo() : void
}
interface ConnectionState {
  +nickname() : String
  +deliver() : void
  +apply() : void
  +atTheDesk() : void
  +leaving() : void
  +gone() : void
}
class Anonymous <<record>> {
}
class AtTheDesk <<record>> {
}
class InGame <<record>> {
}
enum DisconnectionPolicy {
}
class GameArchive {
  -LOG : Logger
  -data : GameData
  -random : RandomGenerator
  -clock : InstantSource
  -soloTimeout : Duration
  -snapshots : Snapshots
  --
  +deal() : GameController
  +recoverAll() : List<GameController>
  +forget() : void
}
class Lobby {
  -LOG : Logger
  -archive : GameArchive
  -onDisconnection : DisconnectionPolicy
  -SHUTDOWN_PATIENCE : Duration
  -queue : ExecutorService
  -nextGame : AtomicInteger
  -roster : Roster
  --
  +welcome() : ChannelListener<Command>
  +submit() : void
  +disconnected() : void
  +awaitQuiet() : boolean
  +fromSomebodyNamed() : void
  +login() : void
  +leftTheDesk() : void
  +leftAGame() : void
  +refuse() : void
  +tablesWaiting() : List<String>
  +gamesRunning() : List<String>
  +close() : void
}
class PendingGame {
  -id : String
  -level : GameLevel
  -seats : int
  -players : List<Connection>
  --
  +id() : String
  +level() : GameLevel
  +seats() : int
  +players() : List<Connection>
  +hasRoom() : boolean
  +isFull() : boolean
  +seat() : PlayerColor
  +colourOf() : PlayerColor
  +remove() : boolean
  +isEmpty() : boolean
  +summary() : GameSummary
}
class Roster {
  -named : Map<String, Connection>
  -tables : Map<String, PendingGame>
  -seats : Map<String, Seated>
  -games : Map<String, GameController>
  -waitingAt : Map<Connection, PendingGame>
  --
  +isTaken() : boolean
  +name() : void
  +release() : void
  +open() : void
  +table() : Optional<PendingGame>
  +tableOf() : Optional<PendingGame>
  +join() : PlayerColor
  +leave() : boolean
  +close() : void
  +withRoom() : List<PendingGame>
  +tablesWaiting() : List<String>
  +started() : void
  +seatOf() : Optional<Seated>
  +reclaim() : void
}
class Seated <<record>> {
}
class ServerSettings <<record>> {
  +defaults() : ServerSettings
  +keeping() : ServerSettings
  +dealtFrom() : ServerSettings
  +shuffledBy() : ServerSettings
  +timedBy() : ServerSettings
  +whenSomebodyDrops() : ServerSettings
  +waiting() : ServerSettings
}

ConnectionState <|.. Anonymous
ConnectionState <|.. AtTheDesk
ConnectionState <|.. InGame
@enduml
